--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8"/>
-		<title>Learn AngularJS - Instant Search</title>
+		<title>Stanford Class Finder</title>
 
 		<link href="http://fonts.googleapis.com/css?family=Cookie|Open+Sans:400,700" rel="stylesheet" />
 
@@ -34,6 +34,9 @@
 				<p>{{i.title}} in {{i.bldg}} ({{i.loc}})</p>
 			</li>
 		</ul>
+
+		<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
+		async defer></script>
 
 		<!-- Include AngularJS from Google's CDN -->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
