Added basic map functionality

--- a/index.html
+++ b/index.html
@@ -34,13 +34,10 @@
 				<p>{{i.title}} in {{i.bldg}} ({{i.loc}})</p>
 			</li>
 		</ul>
+		<div>
+			<ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
+		</div>
 
-		<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
-		async defer></script>
-
-		<!-- Include AngularJS from Google's CDN -->
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-		<script src="script.js"></script>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -49,5 +46,15 @@
 
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+		
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.0.1/lodash.js" type="text/javascript"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.4/angular.min.js"></script>
+		<script src="angular-simple-logger.js"></script>
+		<script src='angular-google-maps.js'></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOpii1ESYwlE64cPlCCXRijnkymgNJp4A"
+    async defer></script>
+
+		<script src="script.js"></script>
 	</body>
 </html>
