--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
 			 -->
 			<li ng-repeat="i in items | searchFor:searchString">
 				<!-- <a href="{{i.url}}"><img ng-src="{{i.image}}" /></a> -->
-				<p>{{i.title}} in {{i.bldg}} {{ i.location }}</p>
-				<ui-gmap-google-map center="i.location" zoom="17" draggable="true" options="options">
+				<p>{{i.title}} in {{i.bldg}}</p>
+				<iframe width="600" height="450" frameborder="0" style="border:0" src="{{i.loc}}" allowfullscreen></iframe>
+<!-- 				<ui-gmap-google-map center="i.location" zoom="17" draggable="false">
 		        <ui-gmap-marker coords='i.location' options="marker.options" events="" idkey="i.id">
 		        </ui-gmap-marker>
-		    </ui-gmap-google-map>
+		    </ui-gmap-google-map> -->
 			</li>
 		</ul>
 		
