--- a/index.html
+++ b/index.html
@@ -30,13 +30,8 @@
 				 searchString model as an argument.
 			 -->
 			<li ng-repeat="i in items | searchFor:searchString">
-				<!-- <a href="{{i.url}}"><img ng-src="{{i.image}}" /></a> -->
-				<p>{{i.title}} in {{i.bldg}}</p>
+				<p>{{i.title}}: {{i.desc}} in {{i.bldg}}</p>
 				<iframe width="600" height="450" frameborder="0" style="border:0" src="{{i.loc}}" allowfullscreen></iframe>
-<!-- 				<ui-gmap-google-map center="i.location" zoom="17" draggable="false">
-		        <ui-gmap-marker coords='i.location' options="marker.options" events="" idkey="i.id">
-		        </ui-gmap-marker>
-		    </ui-gmap-google-map> -->
 			</li>
 		</ul>
 		
@@ -50,15 +45,7 @@
 
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		
-
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.0.1/lodash.js" type="text/javascript"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.4/angular.min.js"></script>
-		<script src="angular-simple-logger.js"></script>
-		<script src='angular-google-maps.js'></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOpii1ESYwlE64cPlCCXRijnkymgNJp4A"
-    async defer></script>
-
 		<script src="script.js"></script>
 	</body>
 </html>
